--- a/templates/layout.html
+++ b/templates/layout.html
@@ -87,7 +87,7 @@
                         <input type="checkbox" id="temp-mode-toggle" onchange="toggleTempMode(this)">
                     </label>
 
-                    <button class="nav-item" onclick="alert('PDF Export coming soon!')">
+                    <button class="nav-item" onclick="exportPDF()">
                         <i class="fas fa-file-pdf"></i> Export PDF
                     </button>
                 </div>
